--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -97,7 +97,7 @@
 }
 .icon__heart path {
     opacity: 0.55;
-    transition: 0.2s linear;
+    transition: 0.35s linear;
     &:hover {
         fill: #e52d2d;
     }
