--- a/src/components/Pages/FavouritePage/FavouritePage.scss
+++ b/src/components/Pages/FavouritePage/FavouritePage.scss
@@ -21,6 +21,7 @@
     &__section {
         display: flex;
         align-items: center;
+        padding: 0 10px;
     }
 }
 .basket.empty {
@@ -34,7 +35,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0 0 0 10px;
     min-width: 200px;
     :not(:last-child) {
         margin: 0 0 5px 0;
